--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
